# Crabshell

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.MD  Makefile  README.md  build.rs  config.yml  package.json  pnpm-lock.yaml
client/: index.ts  package.json  pnpm-lock.yaml
client/bot/: index.js
client/sdk/: core.ts  enums.ts  events.ts  index.ts  proto.ts  test.ts
client/sdk/scripts/: createdummy.ts
client/test/: index.js  index.ts
configs/: buf.gen.yaml
documentation/: AUTOSTART.MD
proto/: application.proto  bot.proto  broadcast.proto  database.proto  system.proto
proto/bot/: bot.proto
src/: main.rs
src/application/: application.rs  config.rs  io.rs  manager.rs  mod.rs
src/bot/: bot.rs  config.rs  io.rs  manager.rs  mod.rs
src/cache/: kv.rs
src/config/: mod.rs
src/core/: app.rs  io.rs  mod.rs
src/database/: mod.rs
src/errors/: mod.rs
src/storage/: doctor.rs  fm.rs  go.rs  js.rs  mod.rs
src/tests/: mem_sizes.rs  mod.rs  users.rs
src/utils/: mod.rs  process.rs  thead.rs
